# The-Agentic-Financial-Defense-Swarm-Forensic-AML-Graph-Reasoning-Engine

./: .gitignore  API-spec.yml  ARCHITECTURE.md  DECISIONS.md  Dockerfile  PRD.md  README.md  SUBMISSION.md  docker-compose.yml  main.py  prd.json  progress.txt  prompt.md  pytest.ini  requirements.txt  validate.py
.github/workflows/: publish-dockerhub.yml  publish-green-agent.yml  test.yml
protos/: financial_crime.proto
purple_agent/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  agent.json  pyproject.toml  ralph.sh  requirements.txt  scenario.toml
purple_agent/protos/: __init__.py  financial_crime.proto  financial_crime_pb2.py
purple_agent/scripts/: preflight.sh
purple_agent/src/: __init__.py  baseline_agent.py  config.py  main.py  ralph_runner.py
purple_agent/src/core/: __init__.py  a2a_client.py  a2a_server.py  decision_loop.py  evidence_synthesizer.py  graph_reasoner.py  sar_drafter.py
purple_agent/src/core/heuristics/: __init__.py  layering.py  structuring.py
purple_agent/tests/: __init__.py  conftest.py  test_a2a_client.py  test_a2a_server.py  test_agent_card_schema.py  test_decision_loop.py  test_evidence_synthesizer.py  test_graph_reasoner_core.py  test_layering_detection.py  test_protobuf_schema.py  test_ralph_runner.py  test_sar_drafter.py  test_structuring_detection.py
purple_agent/tests/integration/: __init__.py  test_full_pipeline.py  test_zero_failure.py
scenarios/financial_crime/: README.md  docker-compose.rust.yml  docker-compose.yml  scenario.toml  test_infrastructure.sh
scenarios/financial_crime/green_agent/sidecar/: Cargo.toml  Dockerfile
scenarios/financial_crime/green_agent/sidecar/src/: main.rs
scripts/: .gitkeep  init_server.py  publish-green-agent.ps1  publish-green-agent.sh  run_benchmark.py
src/: __init__.py  config.py
src/core/: __init__.py  a2a_interface.py  crime_injector.py  evidence_generator.py  financial_crime_pb2.py  graph_generator.py  result_types.py  sdv_models.py
src/utils/: __init__.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_a2a_interface.py  test_full_pipeline.py  test_reproducibility.py
tests/unit/: __init__.py  test_crime_injector.py  test_graph_generator.py  test_validators.py
(+11 files in other folders)
